# django-crud

./: .coveragerc  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci-cd.yml
api/: admin.py  models.py  serializers.py  urls.py  views.py
apps/: __init__.py
apps/account/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py
apps/catalog/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py
apps/geo/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/geo/migrations/: 0001_initial.py
apps/operation/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/operation/migrations/: 0001_initial.py
dvd_rental/: asgi.py  settings.py  test_runner.py  urls.py  wsgi.py
